--- a/Translation/__Info__.txt
+++ b/Translation/__Info__.txt
@@ -1,81 +1,201 @@
-msg_ActionGuide.xml     0029
-msg_Book.xml            0303
-msg_Cooking.xml         0099
-msg_CostumeChange.xml   0101
-msg_ErrorWindow.xml     0010
-msg_FarmMain.xml        0062
-msg_Income.xml          0007
-msg_Item.xml            1218
-msg_ItemListDisp.xml    0026
-msg_MainMenu.xml        0162
-msg_MenuFarmInfo.xml    0039
-msg_MenuFriendship.xml  0136
-msg_MenuMap.xml         0126
-msg_Minigame.xml                0233
-msg_Misc.xml            0145
-msg_MyBook.xml          0153
-msg_Opening.xml         0028
-msg_OtherScene.xml              0322
-msg_Scr_Animal.xml              0043
-msg_Scr_Love_boy.xml            1522
-msg_Scr_Love_girl.xml           1537
-msg_Scr_Map.xml         1291
-msg_Scr_Other.xml               4193
-msg_Scr_Rival.xml               0159
-msg_Scr_Staffroll.xml           0512
-msg_Scr_Staffroll_as.xml                0512
-msg_Scr_Staffroll_eu.xml     msg_ActionGuide.xml             0029
-msg_Book.xml            0303
-msg_Cooking.xml         0099
-msg_CostumeChange.xml           0101
-msg_ErrorWindow.xml             0010
-msg_FarmMain.xml                0062
-msg_Income.xml          0007
-msg_Item.xml            1218
-msg_ItemListDisp.xml            0026
-msg_MainMenu.xml                0162
-msg_MenuFarmInfo.xml            0039
-msg_MenuFriendship.xml          0136
-msg_MenuMap.xml         0126
-msg_Minigame.xml                0233
-msg_Misc.xml            0145
-msg_MyBook.xml          0153
-msg_Opening.xml         0028
-msg_OtherScene.xml              0322
-msg_Scr_Animal.xml              0043
-msg_Scr_Love_boy.xml            1522
-msg_Scr_Love_girl.xml           1537
-msg_Scr_Map.xml         1291
-msg_Scr_Other.xml               4193
-msg_Scr_Rival.xml               0159
-msg_Scr_Staffroll.xml           0512
-msg_Scr_Staffroll_as.xml                0512
-msg_Scr_Staffroll_eu.xml                0512
-msg_Scr_Staffroll_steam.xml             0512
-msg_Scr_Staffroll_us.xml                0512
-msg_Scr_Stuffroll.xml           0312
-msg_Scr_System.xml              0073
-msg_Scr_Talk.xml                4225
-msg_Scr_Talk_Girl.xml           0001
-msg_Scr_Television.xml          2422
-msg_Scr_Tutorial.xml            0525
-msg_Scr_Year.xml                1269
-msg_Shop.xml            0896
-msg_System.xml          0281
-msg_Test.xml            0011
-msg_Viewer.xml          0044
 
-[Program finished]           0512
-msg_Scr_Staffroll_steam.xml             0512
-msg_Scr_Staffroll_us.xml                0512
-msg_Scr_Stuffroll.xml           0312
-msg_Scr_System.xml              0073
-msg_Scr_Talk.xml                4225
-msg_Scr_Talk_Girl.xml           0001
-msg_Scr_Television.xml          2422
-msg_Scr_Tutorial.xml            0525
-msg_Scr_Year.xml                1269
-msg_Shop.xml            0896
-msg_System.xml          0281
-msg_Test.xml            0011
-msg_Viewer.xml          004
+Nama file: msg_ActionGuide.xml
+Total string:0029
+Translator:Beruang Laut
+Note:
+-----------------------------
+Nama file: msg_Book.xml
+Total string:0303
+Translator:--
+Note:
+-----------------------------
+Nama file: msg_Cooking.xml
+Total string:0099
+Translator:Beruang Laut
+Note:
+-----------------------------
+Nama file: msg_CostumeChange.xml
+Total string:0101
+Translator:Beruang Laut
+Note:
+-----------------------------
+Nama file: msg_ErrorWindow.xml
+Total string:0010
+Translator:Beruang Laut
+Note:
+-----------------------------
+Nama file: msg_FarmMain.xml
+Total string:0062
+Translator:Beruang Laut
+Note:
+-----------------------------
+Nama file: msg_Income.xml
+Total string:0007
+Translator:Beruang Laut
+Note:
+-----------------------------
+Nama file: msg_Item.xml
+Total string:1218
+Translator:--
+Note:
+-----------------------------
+Nama file: msg_ItemListDisp.xml
+Total string:0026
+Translator:Beruang Laut
+Note:
+-----------------------------
+Nama file: msg_MainMenu.xml
+Total string:0162
+Translator:Beruang Laut
+Note:
+-----------------------------
+Nama file: msg_MenuFarmInfo.xml
+Total string:0039
+Translator:Beruang Laut
+Note:
+-----------------------------
+Nama file: msg_MenuFriendship.xml
+Total string:0136
+Translator:Beruang Laut
+Note:
+-----------------------------
+Nama file: msg_MenuMap.xml
+Total string:0126
+Translator:Beruang Laut
+Note:
+-----------------------------
+Nama file: msg_Minigame.xml
+Total string:0233
+Translator:Beruang Laut
+Note:
+-----------------------------
+Nama file: msg_Misc.xml
+Total string:0145
+Translator:Beruang Laut
+Note:
+-----------------------------
+Nama file: msg_MyBook.xml
+Total string:0153
+Translator:Beruang Laut
+Note:
+-----------------------------
+Nama file: msg_Opening.xml
+Total string:0028
+Translator:Beruang Laut
+Note:
+-----------------------------
+Nama file: msg_OtherScene.xml
+Total string:0322
+Translator:Beruang Laut
+Note:
+-----------------------------
+Nama file: msg_Scr_Animal.xml
+Total string:0043
+Translator:Beruang Laut
+Note:
+-----------------------------
+Nama file: msg_Scr_Love_boy.xml
+Total string:1522
+Translator:--
+Note:
+-----------------------------
+Nama file: msg_Scr_Love_girl.xml
+Total string:1537
+Translator:--
+Note:
+-----------------------------
+Nama file: msg_Scr_Map.xml
+Total string:1291
+Translator:--
+Note:
+-----------------------------
+Nama file: msg_Scr_Other.xml
+Total string:4193
+Translator:--
+Note:
+-----------------------------
+Nama file: msg_Scr_Rival.xml
+Total string:0159
+Translator:Beruang Laut
+Note:
+-----------------------------
+Nama file: msg_Scr_Staffroll.xml
+Total string:0512
+Translator:Beruang Laut
+Note:
+-----------------------------
+Nama file: msg_Scr_Staffroll_as.xml
+Total string:0512
+Translator:Beruang Laut
+Note:
+-----------------------------
+Nama file: msg_Scr_Staffroll_eu.xml
+Total string:0512
+Translator:Beruang Laut
+Note:
+-----------------------------
+Nama file: msg_Scr_Staffroll_steam.xml
+Total string:0512
+Translator:Beruang Laut
+Note:
+-----------------------------
+Nama file: msg_Scr_Staffroll_us.xml
+Total string:0512
+Translator:Beruang Laut
+Note:
+-----------------------------
+Nama file: msg_Scr_Stuffroll.xml
+Total string:0312
+Translator:Beruang Laut
+Note:
+-----------------------------
+Nama file: msg_Scr_System.xml
+Total string:0073
+Translator:Beruang Laut
+Note:
+-----------------------------
+Nama file: msg_Scr_Talk.xml
+Total string:4225
+Translator:--
+Note:
+-----------------------------
+Nama file: msg_Scr_Talk_Girl.xml
+Total string:0001
+Translator:Beruang Laut
+Note:
+-----------------------------
+Nama file: msg_Scr_Television.xml
+Total string:2422
+Translator:--
+Note:
+-----------------------------
+Nama file: msg_Scr_Tutorial.xml
+Total string:0525
+Translator:--
+Note:
+-----------------------------
+Nama file: msg_Scr_Year.xml
+Total string:1269
+Translator:--
+Note:
+-----------------------------
+Nama file: msg_Shop.xml
+Total string:0896
+Translator:Beruang Laut
+Note:
+-----------------------------
+Nama file: msg_System.xml
+Total string:0281
+Translator:Beruang Laut
+Note:
+-----------------------------
+Nama file: msg_Test.xml
+Total string:0011
+Translator:Beruang Laut
+Note:
+-----------------------------
+Nama file: msg_Viewer.xml
+Total string:0044
+Translator:Beruang Laut
+Note:
+-----------------------------
