--- a/Translation/msg_ActionGuide.xml
+++ b/Translation/msg_ActionGuide.xml
@@ -1,88 +1,88 @@
 TOTAL_STRING:0029
 *******************************
 [0000]
-Examine
+Periksa
 <------------------------------------------------------->
 [0001]
-Talk
+Bicara
 <------------------------------------------------------->
 [0002]
-Open
+Buka
 <------------------------------------------------------->
 [0003]
-Shipping Bin
+Kotak Pengiriman
 <------------------------------------------------------->
 [0004]
-Cabinet
+Lemari
 <------------------------------------------------------->
 [0005]
-Tool Box
+Kotak Alat
 <------------------------------------------------------->
 [0006]
-Fridge
+Kulkas
 <------------------------------------------------------->
 [0007]
-Calendar
+Kalender
 <------------------------------------------------------->
 [0008]
-Journal
+Jurnal
 <------------------------------------------------------->
 [0009]
-Bed
+Kasur
 <------------------------------------------------------->
 [0010]
-Big Bed
+Kasur besar
 <------------------------------------------------------->
 [0011]
 <petname>
 <------------------------------------------------------->
 [0012]
-Bathe
+Kamar Mandi
 <------------------------------------------------------->
 [0013]
-Cook
+Memasak
 <------------------------------------------------------->
 [0014]
-Bookshelf
+Rak Buku
 <------------------------------------------------------->
 [0015]
-Watch TV
+Tonton TV
 <------------------------------------------------------->
 [0016]
-Check Mail
+Cek surat
 <------------------------------------------------------->
 [0017]
-Exit Mine
+Keluar tambang
 <------------------------------------------------------->
 [0018]
-Go Down
+Turun kebawah
 <------------------------------------------------------->
 [0019]
-Throw
+Buang
 <------------------------------------------------------->
 [0020]
-Change Outfit
+Ganti baju
 <------------------------------------------------------->
 [0021]
-Fish Pond
+Kolam ikan
 <------------------------------------------------------->
 [0022]
-Add Fish
+Tambahkan ikan
 <------------------------------------------------------->
 [0023]
-Ring Bell
+Bunyikan Bell
 <------------------------------------------------------->
 [0024]
-Ride
+Tunggangi
 <------------------------------------------------------->
 [0025]
-Shopping Master
+Ahlinya Belanja
 <------------------------------------------------------->
 [0026]
-Place
+Taruh
 <------------------------------------------------------->
 [0027]
-Enter
+Masuk
 <------------------------------------------------------->
 [0028]
 
